plugin/tests/snapshots/render_snapshots__render_browse_clips_labels_to_viewport_width.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 14, 40)"
---
[1m[36m zelligent · myrepo (2) ───────────────[0m

  ▌  [36m⎇[0m [42m[30m[0m[42m[30m feature-super-long-branch-nam [0m[32m[0m
  ▌[2m    branch: feature/super-long-branch[0m
     [2m□[0m manual-tab-with-a-very-long-name 
   [2m    user tab                         [0m




  [2mready                                 [0m

  [2mjk move · Enter switch · n branch · i [0m
  [2mVERSION                     [0m
