plugin/tests/snapshots/render_snapshots__render_browse_empty_with_stale_marker.snap
---
source: tests/render_snapshots.rs
expression: output
---
[?1049h[H[2J[1m[36m zelligent ─────────────────────────────────────────────────────────────────────[0m
  [33m⚠ stale · retrying — boom · e: details[0m

  [1mNo managed worktrees yet.[0m
  [2mPick a branch or type a new one to get started.[0m

  [2mn[0m  pick an existing branch
  [2mi[0m  type a new branch name










  [2m↑/k[0m up  [2m↓/j[0m down  [2mEnter[0m open  [2mn[0m branch  [2mi[0m new  [2md[0m remove  [2mr[0m refresh
  [2mVERSION                                                             [0m
