plugin/tests/snapshots/render_snapshots__render_browse_empty_with_wrapped_status.snap
---
source: tests/render_snapshots.rs
expression: output
---
[?1049h[H[2J[1m[36m zelligent ───────────────────────────────────────[0m

  [1mNo managed worktrees yet.[0m
  [2mPick a branch or type a new one to get started.[0m

  [2mi[0m  type a new branch name
  [2mn[0m  pick an existing branch








[31m  Only worktree tabs can be removed from the[0m
[31m  sidebar[0m

  [2mr[0m refresh
  [2mVERSION                               [0m
