plugin/tests/snapshots/render_snapshots__render_browse_mixed_dir_branch_names.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 20, 80)"
---
[?1049h[H[2J[1m[36m myrepo ────────────────────────────────────────────────────────────────────────[0m

[36m▌[0m [1m[36mautonomy                                                                    [0m  
[36m▌[0m [2mbranch: plugin-snapshot-tests                                               [0m
  competition                                                                   
  [2mbranch: competition                                                         [0m
  ding                                                                          
  [2mbranch: feat/ding-dong                                                      [0m










  [2m↑/k[0m up  [2m↓/j[0m down  [2mEnter[0m open  [2mn[0m branch  [2mi[0m new  [2md[0m remove  [2mr[0m refresh
  [2mVERSION                                                             [0m
