plugin/tests/snapshots/render_snapshots__render_browse_stale_marker_tiny_pane_6_rows_no_overflow.snap
---
source: tests/render_snapshots.rs
expression: output
---
[?1049h[H[2J  [33m⚠ stale · retrying — too many open fi…[0m


  [31mFailed to list worktrees: too many open files[0m
  [2mVERSION                     [0m
